2010-01-02  Mario Carrion  <mario@carrion.mx>
	* barecity_1.5/index.php,
	  barecity_1.5/style.css,
	  barecity_1.5/shortcut-icon.png: Added url-shortener.

--- a/barecity_1.5/style.css
+++ b/barecity_1.5/style.css
@@ -126,6 +126,13 @@ ul.post-meta span.post-meta-key {
 	clear: both;
 }
 
+.shortenurl {
+	color: #666;
+	font-size:11px;
+	margin: 25px 0 0 0;
+	clear: both;
+}
+
 .meta {
 	font-size: 10px;
 }
