2010-01-13  Mario Carrion  <mario@carrion.mx>
	* barecity_1.5/style.css: Centering.
	* barecity_1.5/footer.php: Copyright updated.
	* .gitignore: File added. Ignores *.swp

--- a/barecity_1.5/style.css
+++ b/barecity_1.5/style.css
@@ -387,9 +387,8 @@ ul.post-meta span.post-meta-key {
 
 #rap {
 	background-color: #FFFFFF;
-	margin-right:auto;
-	margin-left:130px;
-	width:810px; /* FIXME */
+	margin: 0 auto;
+	width:810px;
 	padding: 6px;
 }
 
