2010-02-17  Mario Carrion  <mario@carrion.mx>
	* barecity_1.5/comments.php:
	* barecity_1.5/style.css: Gravatar support added.

--- a/barecity_1.5/style.css
+++ b/barecity_1.5/style.css
@@ -433,3 +433,9 @@ img.alignleft {
 	margin: 0 7px 2px 0;
 	display: inline;
 }
+
+img.avatar {
+	float: left;
+	margin: 0 25px 10px 0;
+	display: inline;
+}
