2010-02-17  Mario Carrion  <mario@carrion.mx>:wq
	* barecity_1.5/style.css: Style updated.
	* barecity_1.5/comments.php: Size reduced to 45px.

--- a/barecity_1.5/style.css
+++ b/barecity_1.5/style.css
@@ -90,6 +90,7 @@ ol#comments li p {
 
 #commentlist li{
 	margin-left:-22px;
+	list-style-type: none;
 }
 
 p, li, .feedback {
@@ -436,6 +437,6 @@ img.alignleft {
 
 img.avatar {
 	float: left;
-	margin: 0 25px 10px 0;
-	display: inline;
+	padding: 4px;
+	margin: 0 15px 0 0;
 }
